; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/arm/extr_machine_routines_common.c_machine_switch_populate_perfcontrol_thread_data.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/arm/extr_machine_routines_common.c_machine_switch_populate_perfcontrol_thread_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.perfcontrol_thread_data = type { i32, i32, i32, i64, i32 }
%struct.TYPE_5__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.perfcontrol_thread_data*, %struct.TYPE_5__*, i32)* @machine_switch_populate_perfcontrol_thread_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @machine_switch_populate_perfcontrol_thread_data(%struct.perfcontrol_thread_data* %0, %struct.TYPE_5__* %1, i32 %2) #0 {
  %4 = alloca %struct.perfcontrol_thread_data*, align 8
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca i32, align 4
  store %struct.perfcontrol_thread_data* %0, %struct.perfcontrol_thread_data** %4, align 8
  store %struct.TYPE_5__* %1, %struct.TYPE_5__** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.perfcontrol_thread_data*, %struct.perfcontrol_thread_data** %4, align 8
  %8 = call i32 @bzero(%struct.perfcontrol_thread_data* %7, i32 32)
  %9 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %10 = call i32 @thread_get_perfcontrol_class(%struct.TYPE_5__* %9)
  %11 = load %struct.perfcontrol_thread_data*, %struct.perfcontrol_thread_data** %4, align 8
  %12 = getelementptr inbounds %struct.perfcontrol_thread_data, %struct.perfcontrol_thread_data* %11, i32 0, i32 4
  store i32 %10, i32* %12, align 8
  %13 = load %struct.perfcontrol_thread_data*, %struct.perfcontrol_thread_data** %4, align 8
  %14 = getelementptr inbounds %struct.perfcontrol_thread_data, %struct.perfcontrol_thread_data* %13, i32 0, i32 3
  store i64 0, i64* %14, align 8
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.perfcontrol_thread_data*, %struct.perfcontrol_thread_data** %4, align 8
  %19 = getelementptr inbounds %struct.perfcontrol_thread_data, %struct.perfcontrol_thread_data* %18, i32 0, i32 2
  store i32 %17, i32* %19, align 8
  %20 = load i32, i32* %6, align 4
  %21 = load %struct.perfcontrol_thread_data*, %struct.perfcontrol_thread_data** %4, align 8
  %22 = getelementptr inbounds %struct.perfcontrol_thread_data, %struct.perfcontrol_thread_data* %21, i32 0, i32 1
  store i32 %20, i32* %22, align 4
  %23 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %24 = call i32 @FIND_PERFCONTROL_STATE(%struct.TYPE_5__* %23)
  %25 = load %struct.perfcontrol_thread_data*, %struct.perfcontrol_thread_data** %4, align 8
  %26 = getelementptr inbounds %struct.perfcontrol_thread_data, %struct.perfcontrol_thread_data* %25, i32 0, i32 0
  store i32 %24, i32* %26, align 8
  ret void
}

declare dso_local i32 @bzero(%struct.perfcontrol_thread_data*, i32) #1

declare dso_local i32 @thread_get_perfcontrol_class(%struct.TYPE_5__*) #1

declare dso_local i32 @FIND_PERFCONTROL_STATE(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
